# fagligfredag

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.ps1
.claude/: CLAUDE.md  agr.toml  settings.json  settings.local.json
.claude/agents/: code-reviewer.md  data-modeler.md  dbt-doctor.md  dbt-runner.md  dim-modeler.md  error-coordinator.md  powerbi-modeler.md  workflow-orchestrator.md
.claude/commands/: arch-review.md  bugs.md  commit.md  dbt-build.md  dbt-docs.md  dbt-run.md  dimensional-modeller.md  pr.md  rebase.md  run-pipeline.md  run-webapp.md  worktree.md
.claude/hooks/: post-build-notify.ps1  pre-commit-dbt.ps1
.claude/rules/: dbt-standards.md  git-workflow.md  power-bi-standards.md
.dlt_pipelines/nyc_taxi_pipeline/: state.json  trace.pickle
.dlt_pipelines/schema_demo_pipeline/: state.json  trace.pickle
.github/workflows/: dbt-ci.yml  dlt-ci.yml  full-pipeline.yml  (+1 more)
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
demos/: incremental_load_demo.py  schema_change_demo.py
dlt_pipeline/: nyc_taxi_pipeline.py
docs/: ARCHITECTURE.md  AUTONOMOUS_AGENT_SETUP.md  CI_CD.md  CLAUDE_CODE_BEST_PRACTICES.md  DEMOS.md  GIT_WORKFLOW.md  MEDALLION_ARCHITECTURE.md  MODELS.md  MULTI_AGENT_WORKFLOW.md  PLANNING_SLIDE_CREATOR.md  PROJECT_IMPROVEMENT_PLAN.md  README.md  SETUP.md  WEBAPP_REVISION_PLAN.md
documentation/: ARCHITECTURE.md  DEMOS.md  MODELS.md  MULTI_AGENT.md  PLAN.md  SETUP.md
scripts/: bootstrap_project.ps1  create_worktree.ps1  remove_worktree.ps1  setup.ps1  validate_dbt_model.py
webapp/: README.md
(+91 files in other folders)
