[project]
name = "nyc-taxi-analytics"
version = "0.1.0"
description = "NYC Taxi Analytics Platform - dlt + dbt + DuckDB"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "dlt[duckdb]>=0.4.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dlt_pipeline"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
